// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests Panel will render correctly with all options 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      title
    </div>
  </div>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      Foo
    </div>
  </div>
</div>
`;

exports[`snapshot tests Panel will render correctly with sections 1`] = `
<div
  className=""
>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      <div
        className=""
      >
        <div
          className={undefined}
        >
          Foo
        </div>
      </div>
      <div
        className=""
      >
        <div
          className={undefined}
        >
          Bar
        </div>
      </div>
    </div>
  </div>
</div>
`;
